@@ -16,7 +16,6 @@
  */
 package org.graylog.security.shares;
 
-import com.google.auto.value.AutoValue;
 import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Maps;
 import com.google.common.primitives.Ints;
@@ -50,13 +49,22 @@ public class GranteeSharesService {
     private final DBGrantService grantService;
     private final GRNDescriptorService descriptorService;
     private final GranteeService granteeService;
+    private final PluggableEntityService pluggableEntityService;
 
     @Inject
     public GranteeSharesService(DBGrantService grantService,
-                                GRNDescriptorService descriptorService, GranteeService granteeService) {
+                                GRNDescriptorService descriptorService,
+                                GranteeService granteeService,
+                                PluggableEntityService pluggableEntityService) {
         this.grantService = grantService;
         this.descriptorService = descriptorService;
         this.granteeService = granteeService;
+        this.pluggableEntityService = pluggableEntityService;
+    }
+
+    public Set<GrantDTO> grantsByGrantee(GRN grantee){
+        final Set<GRN> granteeAliases = granteeService.getGranteeAliases(grantee);
+        return grantService.getForGranteesOrGlobal(granteeAliases);
     }
 
     public SharesResponse getPaginatedSharesFor(GRN grantee,
@@ -66,18 +74,23 @@ public class GranteeSharesService {
         final Optional<Capability> capability = EntityPaginationHelper.parseCapabilityFilter(capabilityFilterString);
         // Get all aliases for the grantee to make sure we find all entities the grantee has access to
         final Set<GRN> granteeAliases = granteeService.getGranteeAliases(grantee);
+
         final ImmutableSet<GrantDTO> grants = capability
                 .map(c -> grantService.getForGranteesOrGlobalWithCapability(granteeAliases, c))
                 .orElseGet(() -> grantService.getForGranteesOrGlobal(granteeAliases));
 
-        final Set<GRN> targets = grants.stream().map(GrantDTO::target).collect(Collectors.toSet());
+        final Set<GRN> targets = grants.stream()
+                .map(GrantDTO::target)
+                .flatMap(pluggableEntityService::expand)
+                .filter(pluggableEntityService.excludeTypesFilter())
+                .collect(Collectors.toSet());
 
         final Map<GRN, Set<Grantee>> targetOwners = getTargetOwners(targets);
 
         final Supplier<Stream<EntityDescriptor>> filteredStream = () -> targets.stream()
                 .map(descriptorService::getDescriptor)
                 .filter(EntityPaginationHelper.queryPredicate(paginationParameters.getQuery()))
-                .filter(EntityPaginationHelper.entityFilterPredicate(entityTypeFilterString))
+                .filter(EntityPaginationHelper.entityFiltersDescriptorPredicate(List.of(entityTypeFilterString)))
                 .map(toEntityDescriptor(targetOwners))
                 .sorted(Comparator.comparing(EntityDescriptor::title, (t1, t2) -> {
                     if (paginationParameters.getOrder().toLowerCase(Locale.US).equals("desc")) {
@@ -89,9 +102,9 @@ public class GranteeSharesService {
         final int filteredResultCount = Ints.saturatedCast(filteredStream.get().count());
 
         final List<EntityDescriptor> entityDescriptors = filteredStream.get()
-                .skip(paginationParameters.getPerPage() * (paginationParameters.getPage() - 1))
+                .skip((long) paginationParameters.getPerPage() * (paginationParameters.getPage() - 1))
                 .limit(paginationParameters.getPerPage())
-                .collect(Collectors.toList());
+                .toList();
 
         final Set<GRN> entityDescriptorsGRNs = entityDescriptors.stream()
                 .map(EntityDescriptor::id)
@@ -117,7 +130,7 @@ public class GranteeSharesService {
                 (long) targets.size()
         );
 
-        return SharesResponse.create(paginatedList, granteeCapabilities);
+        return new SharesResponse(paginatedList, granteeCapabilities);
     }
 
     private Function<GRNDescriptor, EntityDescriptor> toEntityDescriptor(Map<GRN, Set<Grantee>> targetOwners) {
@@ -148,14 +161,8 @@ public class GranteeSharesService {
                 .collect(Collectors.toSet());
     }
 
-    @AutoValue
-    public static abstract class SharesResponse {
-        public abstract PaginatedList<EntityDescriptor> paginatedEntities();
-
-        public abstract Map<GRN, Capability> capabilities();
-
-        public static SharesResponse create(PaginatedList<EntityDescriptor> paginatedEntities, Map<GRN, Capability> capabilities) {
-            return new AutoValue_GranteeSharesService_SharesResponse(paginatedEntities, capabilities);
-        }
+    public record SharesResponse(
+            PaginatedList<EntityDescriptor> paginatedEntities,
+            Map<GRN, Capability> capabilities) {
     }
 }
